<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/pizzaName"
        android:layout_width="172dp"
        android:layout_height="23dp"
        android:layout_marginTop="4dp"
        android:text="@string/pizza_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toEndOf="@+id/pizzaPhoto"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pizzaPhoto"
        android:layout_width="109dp"
        android:layout_height="92dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="296dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/deluxepizza"
        android:contentDescription="@string/pizza_photo" />

    <TextView
        android:id="@+id/toppingNames"
        android:layout_width="261dp"
        android:layout_height="36dp"
        android:layout_marginTop="4dp"
        android:text="@string/toppings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toEndOf="@+id/pizzaPhoto"
        app:layout_constraintTop_toBottomOf="@+id/pizzaName" />

    <TextView
        android:id="@+id/priceTextV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/pizzaPhoto"
        app:layout_constraintTop_toBottomOf="@+id/toppingNames" />

</androidx.constraintlayout.widget.ConstraintLayout>